2011-08-30  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/network/MessagingGateway.h: Add ModelSessionOffset.

	* include/network/JoinThread.h: Split asking neighbors into 2 types: with
	and without receiving models afterwards.
	* src/network/JoinThread.cpp: Likewise.

	* include/network/NeighborOut.h: Don't update path here.

	* src/network/RelSatSolverThread.cpp: Remove deleting request_mq due to
	segfault.

	* include/network/Worker.h: Take care of deleting request_mq.

	* include/network/RelSatSolverThread.h: Missing forward declaration of
	ResourceManager.

	* include/network/JoinThread.h: Couple JoinThread and RelSatSolver by 2
	ConcurrentMessageQueues.
	* src/network/JoinThread.cpp: Likewise.
	* include/solver/RelSatSolver.h: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.
	* include/solver/SatSolverFactory.h: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.

	* include/network/ConcurrentMessageQueueHelper.h: Add receive_notification(),
	receive_model_offset().

	* include/network/BaseDispatcher.h: Add unRegisterThread(path).

	* include/network/AsynClient.tcc: Adapt to having NULL at the end.

	* include/dmcs/ModelSessionId.h: Allow NULL models.
	* include/network/NeighborThread.h: Likewise.

2011-08-29  Minh Dao-Tran  <dao@kr.tuwien.ac.at>

	* include/network/Server.h: Remove join_thread and sat_thread
	* src/network/Server.cpp: Likewise.

	* include/network/ThreadFactory.h: Pass resource_manager and worker_index
	to create worker threads.
	* src/network/ThreadFactory.cpp: Likewise.

	* include/network/RelSatSolverThread.h: Use resource_manager and worker_index
	to update status of solver once it finishes computing.
	* src/network/RelSatSolverThread.cpp: Likewise.

	* include/network/Worker.h: Newfile.
	* include/network/Makefile.am: Add Worker.h.

	* include/network/Handler.tcc: Pass k1, k2 to requestWorker.

	* include/mcs/ResourceManager.h: Use mutex lock and condition variable
	to manage requesting and updating status of resources.